Minor Fix total export pdf, wrong font-family

--- a/facturier/static/css/style.css
+++ b/facturier/static/css/style.css
@@ -110,3 +110,7 @@ text-decoration: none;
     font-weight: bold;
     text-decoration: underline;
 }
+
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
